--- a/ASM_JAVA5/src/main/resources/application.properties
+++ b/ASM_JAVA5/src/main/resources/application.properties
@@ -1,10 +1,22 @@
 spring.application.name=ASM_JAVA5
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=WEB_BAN_DO_AN;encrypt=true;trustServerCertificate=true
-spring.datasource.username=sa
-spring.datasource.password=phong123
+#spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=WEB_BAN_DO_AN;encrypt=true;trustServerCertificate=true
+#spring.datasource.username=sa
+#spring.datasource.password=phong123
+#
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
+
+spring.datasource.url=jdbc:mysql://ackz7f.h.filess.io:3306/WEB_BAN_DO_AN_medicineit?useSSL=false&serverTimezone=Asia/Ho_Chi_Minh
+spring.datasource.username=WEB_BAN_DO_AN_medicineit
+spring.datasource.password=0058ae3214e9585fc33d3047c0d9f388cc0d7923
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
 
